@@ -1,0 +1,141 @@
+/*
+ * deskrez.c - handle desktop resolution change dialog
+ *
+ * This file was created to support desktop resolution changes
+ * for the TT and Falcon.
+ *
+ * Copyright (c) 2012 EmuTOS development team
+ *
+ * Authors:
+ *  RFB    Roger Burrows
+ *
+ * This file is distributed under the GPL, version 2 or at your
+ * option any later version.  See doc/license.txt for details.
+ */
+#include "config.h"
+#include "portab.h"
+
+#include "aesbind.h"
+#include "obdefs.h"
+#include "deskrsrc.h"
+#include "optimize.h"
+#include "desk_rsc.h"
+#include "deskapp.h"
+#include "deskfpd.h"
+#include "infodef.h"
+#include "deskwin.h"
+#include "deskbind.h"
+#include "deskglob.h"
+#include "deskinf.h"
+
+#include "xbiosbind.h"
+#include "machine.h"    /* for has_videl etc */
+#include "screen.h"
+#include "kprint.h"
+
+#define NUM_TT_BUTTONS  5
+static const WORD ttrez_from_button[NUM_TT_BUTTONS] =
+    { ST_LOW, ST_MEDIUM, ST_HIGH, TT_LOW, TT_MEDIUM };
+
+/*
+ *  change_st_rez(): change desktop ST resolution
+ *  returns:    0   user cancelled change
+ *              1   user wants to change; newres is updated with new resolution.
+ */
+static int change_st_rez(WORD *newres)
+{
+    if (form_alert(1,(LONG)ini_str(STRESOL)) != 1)
+        return 0;
+
+    *newres = Getrez() ? 0 : 1;
+    return 1;
+}
+
+#if CONF_WITH_TT_SHIFTER
+/*
+ *  change_tt_rez(): change desktop TT resolution
+ *  returns:    0   user cancelled change
+ *              1   user wants to change; newres is updated with new resolution.
+ */
+static int change_tt_rez(WORD *newres)
+{
+LONG tree;
+OBJECT *obj;
+int i, selected;
+WORD oldres;
+
+    oldres = Getrez();
+    for (i = 0; i < NUM_TT_BUTTONS; i++)
+        if (oldres == ttrez_from_button[i])
+            break;
+    if (i >= NUM_TT_BUTTONS)    /* paranoia */
+        return 0;
+
+    selected = i;
+
+    /* set up dialog & display */
+    tree = G.a_trees[ADTTREZ];
+    for (i = 0, obj = (OBJECT *)tree+TTREZSTL; i < NUM_TT_BUTTONS; i++, obj++) {
+        if (ttrez_from_button[i] == TT_LOW)	/* FIXME: remove these 2 lines when */
+            obj->ob_state |= DISABLED;      /* we have 256-colour support in VDI */
+        if (i == selected)
+            obj->ob_state |= SELECTED;
+        else obj->ob_state &= ~SELECTED;
+    }
+
+    inf_show(tree,ROOT);
+
+    if (inf_what(tree,TTREZOK,TTREZCAN) == 0)
+        return 0;
+
+    /* look for button with SELECTED state */
+    i = inf_gindex(tree,TTREZSTL,5);
+    if (i < 0)                  /* paranoia */
+        return 0;
+    if (i == selected)          /* no change */
+        return 0;
+
+    *newres = ttrez_from_button[i];
+    return 1;
+}
+#endif
+ 
+#if CONF_WITH_VIDEL
+/*
+ *  change_falcon_rez(): change desktop Falcon resolution
+ *  returns:    0   user cancelled change
+ *              1   user wants to change; newres is set to 3, and newmode
+ *                  is updated with the new video mode.
+ */
+static int change_falcon_rez(WORD *newres,WORD *newmode)
+{
+    /* for now, we always do nothing ... */
+    return 0;
+}
+#endif
+ 
+/*
+ *  change_resolution(): change desktop resolution
+ *
+ *  note: this is only called when the resolution is changeable;
+ *  i.e. it is NOT called in ST high on an ST, or TT high on a TT
+ *
+ *  returns:    0   user cancelled change
+ *              1   user wants to change; newres is updated with new resolution.
+ *                  if newres is 3, then it's Falcon-style, and newmode is set
+ *                  to the new videomode.
+ */
+int change_resolution(WORD *newres,WORD *newmode)
+{
+#if CONF_WITH_VIDEL
+    if (has_videl)
+        return change_falcon_rez(newres,newmode);
+#endif
+
+#if CONF_WITH_TT_SHIFTER
+    if (has_tt_shifter)
+        return change_tt_rez(newres);
+#endif
+
+	return change_st_rez(newres);
+}
