@@ -1,0 +1,10 @@
+/*
+ * EmuTOS desktop
+ *
+ * Copyright (c) 2012 EmuTOS development team
+ *
+ * This file is distributed under the GPL, version 2 or at your
+ * option any later version.  See doc/license.txt for details.
+ */
+
+int change_resolution(WORD *newres,WORD *newmode);
